# pycmdcheck

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: _quarto.yml  cli.qmd  configuration.qmd  custom-checks.qmd  getting-started.qmd  index.qmd  objects.json
docs/_inv/: python_objects.json
docs/_site/: changelog.html  cli.html  configuration.html  custom-checks.html  getting-started.html  index.html  search.json
docs/_site/reference/: CheckResult.html  CheckStatus.html  Report.html  check.html  checks.base.BaseCheck.html  checks.base.Check.html  checks.docs.DocsCheck.html  checks.imports.ImportsCheck.html  checks.license.LicenseCheck.html  checks.linting.LintingCheck.html  checks.metadata.MetadataCheck.html  checks.structure.StructureCheck.html  checks.tests.TestsCheck.html  checks.typing.TypingCheck.html  config.get_check_config.html  config.is_check_enabled.html  config.load_config.html  discovery.discover_checks.html  discovery.list_available_checks.html  index.html  runner.run_checks.html
docs/reference/: CheckResult.qmd  CheckStatus.qmd  Report.qmd  _sidebar.yml  check.qmd  checks.base.BaseCheck.qmd  checks.base.Check.qmd  checks.docs.DocsCheck.qmd  checks.imports.ImportsCheck.qmd  checks.license.LicenseCheck.qmd  checks.linting.LintingCheck.qmd  checks.metadata.MetadataCheck.qmd  checks.structure.StructureCheck.qmd  checks.tests.TestsCheck.qmd  checks.typing.TypingCheck.qmd  config.get_check_config.qmd  config.is_check_enabled.qmd  config.load_config.qmd  discovery.discover_checks.qmd  discovery.list_available_checks.qmd  index.qmd  runner.run_checks.qmd
src/pycmdcheck/: __init__.py  __main__.py  ast_cache.py  cli.py  config.py  constants.py  discovery.py  package_layout.py  profiles.py  pyproject_reader.py  results.py  runner.py  subprocess_runner.py
src/pycmdcheck/checks/: __init__.py  base.py  build.py  changelog.py  ci.py  citation.py  community.py  dependencies.py  docs.py  doctests.py  formatting.py  imports.py  license.py  linting.py  metadata.py  py_typed.py  python_versions.py  structure.py  tests.py  typing.py  urls.py  version.py
tests/: __init__.py  conftest.py  test_ast_cache.py  test_check_build.py  test_check_changelog.py  test_check_ci.py  test_check_citation.py  test_check_community.py  test_check_dependencies.py  test_check_deps_enhanced.py  test_check_docs.py  test_check_doctests.py  test_check_formatting.py  test_check_license.py  test_check_metadata.py  test_check_py_typed.py  test_check_python_versions.py  test_check_urls.py  test_check_version.py  test_checks.py  test_cli.py  test_config.py  test_config_validation.py  test_integration.py  test_package_layout.py  test_profiles.py  test_pyproject_reader.py  test_results.py  test_runner.py  test_subprocess_runner.py  test_tool_checks_mocked.py
