[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycmdcheck"
version = "0.1.0"
description = "Python package quality checker inspired by R CMD check"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "pycmdcheck contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["package", "check", "quality", "lint", "test"]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
typing-mypy = ["mypy>=1.0"]
typing-pyright = ["pyright>=1.1"]
linting = ["ruff>=0.1"]
all = ["mypy>=1.0", "pyright>=1.1", "ruff>=0.1"]
dev = ["pytest>=8.0", "pytest-cov>=4.0"]
docs = ["quartodoc>=0.7"]

[project.scripts]
pycmdcheck = "pycmdcheck.cli:main"

[project.entry-points."pycmdcheck.checks"]
# Built-in checks are registered here
metadata = "pycmdcheck.checks.metadata:MetadataCheck"
structure = "pycmdcheck.checks.structure:StructureCheck"
tests = "pycmdcheck.checks.tests:TestsCheck"
linting = "pycmdcheck.checks.linting:LintingCheck"
typing = "pycmdcheck.checks.typing:TypingCheck"
imports = "pycmdcheck.checks.imports:ImportsCheck"
license = "pycmdcheck.checks.license:LicenseCheck"
docs = "pycmdcheck.checks.docs:DocsCheck"
dependencies = "pycmdcheck.checks.dependencies:DependenciesCheck"
build = "pycmdcheck.checks.build:BuildCheck"
formatting = "pycmdcheck.checks.formatting:FormattingCheck"
version = "pycmdcheck.checks.version:VersionCheck"
py_typed = "pycmdcheck.checks.py_typed:PyTypedCheck"

[project.urls]
Homepage = "https://github.com/pycmdcheck/pycmdcheck"
Repository = "https://github.com/pycmdcheck/pycmdcheck"
Issues = "https://github.com/pycmdcheck/pycmdcheck/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pycmdcheck"]

[tool.pycmdcheck]
# Default configuration for pycmdcheck itself
fail_on = ["error"]

[tool.pycmdcheck.checks]
metadata = true
structure = true
tests = { enabled = true, runner = "pytest" }
linting = { enabled = true, tool = "ruff" }
typing = { enabled = true, tool = "mypy" }
imports = true
license = true
docs = true
dependencies = true
build = true
formatting = { enabled = true, tool = "ruff" }
version = true
py_typed = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
